add update_production_classify/add production_search

--- a/Application/Home/View/Production/index.html
+++ b/Application/Home/View/Production/index.html
@@ -30,7 +30,7 @@
 						  	</volist>
 						</ul>
 					</div>
-					<input name="title" type="text" id="search-text" value="{$search['title']}">
+					<input name="name" type="text" id="search-text" value="{$search['name']}">
 					<div url="__ACTION__/site_id/{$site_id}/p/{$now_page}" class="search-icon glyphicon glyphicon-search"></div>
 				</form>
 			</div>
